[package]
name = "rust-vmanager"
version = "0.1.0"
authors = ["Joao Veiga <joao@fishbrain.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
dirs = "2.0.2"
git2 = "0.11.0"
simple_logger = "1.4.0"
log = "0.4.8"
failure = "0.1.6"
