[package]
name = "rust-vmanager"
version = "0.1.0"
authors = ["Joao Veiga <joao@fishbrain.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
dirs = "3.0"
git2 = "0.13"
simple_logger = "1.11"
log = "0.4.12"
anyhow = "1.0.33"
thiserror = "1.0"